# GUI_Diffusion

./: .gitignore  GUI_Diffusion_Plan.md  README.md  pyproject.toml
examples/adapters/: copy_adapter.py  sdxl_adapter.py  sdxl_batch_adapter.py
src/gui_diffusion/: __init__.py  capture.py  cli.py  exporter.py  graph.py  models.py  renderer.py  slurm.py  slurm_worker.py  spec_parser.py  trajectory.py  verifier.py  visual.py
tests/: test_pipeline.py
