[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-diffusion"
version = "0.2.0"
description = "GUI-agent training data generator with deterministic visual-adapter and export pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.0",
  "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
gui-diffusion = "gui_diffusion.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
