[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-diffusion"
version = "0.4.0"
description = "GUI-agent training data generator with Slurm B200/H200 visual execution support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.0",
  "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
gui-diffusion = "gui_diffusion.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
